# Mp4InformationAnalyzer

./: CMakeLists.txt  README.md  clean.sh
etc/: packageInstall.sh
exe/conf/: tester.config
lib/: CMakeLists.txt
lib/bento4/: CMakeLists.txt
lib/bento4/Source/C++/Core/: Ap4Atom.cpp  Ap4Atom.h  Ap4AtomFactory.cpp  Ap4UuidAtom.cpp
src/: CMakeLists.txt  exe  mp4AnalyzerMain.cpp  mp4InformationAnalyzerMain.cpp
src/configuration/: CMp4AnalyzerConfiguration.cpp  CMp4AnalyzerConfiguration.h
src/include/: Ap4Atom.h
src/logger/: CMp4AnalyzerLogger.cpp  CMp4AnalyzerLogger.h
src/mediaAnalysis/: CMediaAnalysisManager.cpp  CMediaAnalysisManager.h
src/ui/: CMp4AnalyzerUi.cpp  CMp4AnalyzerUi.h  CMp4Binary.cpp  CMp4Binary.h  CMp4Information.cpp  CMp4Information.h  CMp4InformationAnalyzerUi.cpp  CMp4InformationAnalyzerUi.h  CMp4Structure.cpp  CMp4Structure.h  xmp.h
