project(TviewIsoMp4 C CXX)
cmake_minimum_required(VERSION 2.8.7)

message(STATUS "== SETTING MP4 ANALYZER BUILD ==")

set(PROJECT_ROOT_DIR ${CMAKE_SOURCE_DIR})
set(MP4_ANALYZER_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

message(STATUS "LD_LIBRARY_PATH : $ENV{LD_LIBRARY_PATH}")
message(STATUS "MP4_ANALYZER_SOURCE_DIR : ${MP4_ANALYZER_SOURCE_DIR}")
message(STATUS "PROJECT ROOT DIR : ${PROJECT_ROOT_DIR}")

set(CMAKE_INSTALL_PREFIX ${PROJECT_ROOT_DIR}/target/lib)

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	set(CMAKE_MACOSX_RPATH ON)
endif()

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/target/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/target/bin)

execute_process(
COMMAND git describe --abbrev=0 --tags
WORKING_DIRECTORY ${MP4_ANALYZER_SOURCE_DIR}
RESULT_VARIABLE GIT_RESULT
OUTPUT_VARIABLE GIT_VERSION
)

string(STRIP ${GIT_VERSION} GIT_VERSION)
message(STATUS "Git Version[${GIT_RESULT}] : ${GIT_VERSION}")
set(GIT_VERSION ${GIT_VERSION})

add_subdirectory(src)
#add_subdirectory(test)
	
